manifests/petcloudstoreorderservice-deployment-everything-enabled.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-petstoreorderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-petstoreorderservice
  template:
    metadata:
      labels:
        app: aks-petstoreorderservice
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
        agentpool: nodepool1
      containers:
      - name: petstoreorderservice
        image: petcloudstorecr.azurecr.io/petstoreorderservice:latest
        resources:
          requests:
            cpu: 250m
            memory: 1Gi
          limits:
            cpu: 500m
            memory: 2Gi
        ports:
        - containerPort: 8080
