manifests/petcloudstoreproductservice-service-everything-enabled.yml
apiVersion: v1
kind: Service
metadata:
  name: aks-petcloudstoreproductservice 
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-petcloudstoreproductservice
