manifests/aks-petcloudstoreservices-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-petstoreservices
  annotations:
    nginx.ingress.kubernetes.io/ingress-class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
    - http:
        paths:
          - path: /petstorepetservice
            pathType: Prefix
            backend:
              service:
                name: aks-petstorepetservice
                port:
                  number: 80
          - path: /petstoreproductservice
            pathType: Prefix
            backend:
              service:
                name: aks-petstoreproductservice
                port:
                  number: 80
          - path: /petstoreorderservice
            pathType: Prefix
            backend:
              service:
                name: aks-petstoreorderservice
                port:
                  number: 80
